# Bagdar-AI

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  bagdar_depth_ncnn.cpp  vision_guide_native.cpp
android/app/src/main/kotlin/com/example/bagdar/: AudioCapturePlugin.kt  HardwareDepthSession.kt  MainActivity.kt
android/app/src/main/kotlin/com/example/vision_guide_app/: MainActivity.kt
assets/: midas_small.ncnn.param  yolov8n_int8.tflite
ios/Runner/: AppDelegate.swift  HardwareDepthBridge.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: camera_screen.dart  gesture_tutorial_screen.dart  main.dart  onboarding_screen.dart  real_dim.dart
lib/camera/: alert_manager.dart  camera_lifecycle_controller.dart  depth_pipeline_controller.dart  fall_countdown_controller.dart  frame_quality_guard.dart  object_finder_session.dart  stall_watchdog.dart  voice_command_dispatcher.dart
lib/models/: a11y_prefs.dart  app_mode.dart  constants.dart  map_package.dart  nav_models.dart  routing_graph.dart  speech_job.dart  strings.dart
lib/screens/: settings_qr_export_screen.dart  settings_qr_import_screen.dart
lib/services/: acoustic_world_model.dart  ambient_classifier.dart  arcore_depth_whitelist.dart  audio_capture_broker.dart  battery_monitor.dart  ch_router.dart  compass_service.dart  depth_provider.dart  device_capability.dart  earcon_service.dart  fall_detector.dart  feature_usage_tracker.dart  field_logger.dart  foreground_service.dart  gtfs_service.dart  haptic_service.dart  hardware_depth_bridge.dart  indoor_gate.dart  map_package_manager.dart  memory_monitor.dart  misalignment_watchdog.dart  model_service.dart  motion_prealert.dart  native_depth_bridge.dart  navigation_service.dart  ncnn_depth_bridge.dart  ncnn_depth_provider.dart  object_memory_service.dart  ocr_service.dart  offline_poi_service.dart  offline_routing_service.dart  orientation_service.dart  payment_sms_parser.dart  payment_sms_service.dart  proximity_beacon_service.dart  reverb_classifier.dart  scene_narrator.dart  settings_codec.dart  settings_service.dart  sos_service.dart  (+9 more)
lib/tracker/: appearance.dart  hungarian.dart  kalman_box_tracker.dart  raw_det.dart  track.dart  tracker.dart
lib/utils/: alert_filter.dart  blur_detector.dart  decision_engine.dart  depth_hazard.dart  distance_utils.dart  fusion_engine.dart  ground_plane_analyzer.dart  midas_service.dart  performance_throttler.dart
lib/viewmodels/: camera_view_model.dart
lib/widgets/: camera_controls_sheet.dart  debug_hud.dart  map_download_screen.dart  nav_hud.dart  status_panel.dart  track_painter.dart  waypoint_sheet.dart
scripts/: build_ch_graph.py  build_gtfs_db.py  build_poi_db.py  package_city.py  parse_perf_logs.py
test/: alert_manager_critical_cooldown_test.dart  alert_manager_crowd_escalation_test.dart  appearance_test.dart  arcore_depth_whitelist_test.dart  blur_detector_test.dart  core_logic_test.dart  escalator_test.dart  fall_detector_lockout_test.dart  feature_usage_tracker_test.dart  features_test.dart  frame_quality_guard_test.dart  hardware_depth_aggressive_close_test.dart  hungarian_test.dart  indoor_gate_test.dart  memory_monitor_test.dart  midas_stuck_watchdog_test.dart  misalignment_watchdog_test.dart  model_service_tier_test.dart  near_field_test.dart  payment_sms_parser_test.dart  performance_throttler_test.dart  safety_audit_fixes_test.dart  safety_enhancements_test.dart  scene_narrator_test.dart  settings_codec_test.dart  sos_service_test.dart  stall_watchdog_test.dart  synthetic_event_camera_test.dart  tracker_test.dart  traffic_light_analyzer_test.dart  tts_service_test.dart  turn_prediction_test.dart  voice_command_service_test.dart  weather_gate_test.dart  widget_test.dart
tools/: analyze_session.py  build_source_deposit.py
